--- a/components/TrendingMarquee.module.css
+++ b/components/TrendingMarquee.module.css
@@ -48,7 +48,7 @@
 .icon {
   display: flex;
   align-items: center;
-  color: var(--color-primary);
+  color: var(--color-luxury-gold);
   margin-right: 0.75rem;
 }
 
